# i3-Display-Manager

./: .gitignore  CMakeLists.txt  FindXrandr.cmake  README.md
include/: DisconnectedOutputError.h  Display.h  Screen.h  ScreenManager.h  utils.h
src/: Display.cpp  Screen.cpp  ScreenManager.cpp  main.cpp  utils.cpp
test/: ScreenTest.cpp
